# stefan

./: .gitignore  AGENTS.md  README.md  RESTORE_V1.txt  TODO.md  pyproject.toml
benchmark/: fixed_benchmark.json
reduct/: cli.py  redactor.py  web.py
reduct/data/: construction_orgs.txt  stopwords_construction.txt  swedish_first_names.txt  swedish_insurance_finance.txt  swedish_org_acronyms.txt  swedish_surnames.txt
reduct/detectors/: __init__.py  context_triggers.py  dictionary.py  dictionary_orgs.py  merger.py  name_morphology.py  nlp.py  regex.py
reduct/static/: index.html
stefan/: __init__.py  cli.py  hydrator.py  redactor.py  web.py
stefan/data/: construction_orgs.txt  custom_names.txt  polish_names.txt  staffing_companies.txt  stopwords_construction.txt  swedish_law_firms.txt  swedish_municipal_departments.txt
stefan/detectors/: __init__.py  context_triggers.py  dictionary.py  dictionary_orgs.py  merger.py  name_morphology.py  nlp.py  regex.py
stefan/static/: index.html
tests/: test_critical_round3.py  test_dictionary.py  test_dictionary_orgs.py  test_fixes_v2.py  test_instruction_clipboard.py  test_location_coverage.py  test_merger.py  test_redact_hydrate.py  test_regex.py  test_spacy_false_positive_regressions.py
todos/: ner-streamlining.md
