[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stefan"
version = "0.1.0"
description = "A CLI tool for reversible text redaction with regex, dictionary, and spaCy NER detection."
requires-python = ">=3.9"
dependencies = [
    "click",
    "spacy",
]

[project.optional-dependencies]
test = ["pytest"]
web = ["flask"]

[project.scripts]
stefan = "stefan.cli:cli"

[tool.setuptools.packages.find]
include = ["stefan*"]

[tool.setuptools.package-data]
stefan = ["data/*.txt", "static/*.html"]
